# DataCo_Supply_Chain

./: README.md  environment.yaml  environment_H.yaml
PoC/: inference.py  test.py  train.py
app/: app.py
data/processed/: Q1_2015_cleaned.csv  Q1_2015_demand_forecast.csv
mlruns/0/: meta.yaml
models/: Demand_Forecasting.ipynb  H2O_test.ipynb  Order_Fraud_Detection.ipynb  Order_Fraud_Detection_Update.ipynb  Pipeline.ipynb  causal_inference.ipynb  cluster_centroids.xlsx  cluster_labels.xlsx  data streaming.ipynb  data_split.ipynb  fraud order clustering.ipynb  leaderboard.csv  mlflow.ipynb  tpot_classification_pipeline.py
models/.ipynb_checkpoints/: Order_Fraud_Detection_Update-checkpoint.ipynb
models/demand_forecast/: Data_Preprocessing-3.py  Data_Preprocessing.ipynb  Data_Preprocessing_v1.ipynb  Data_Preprocessing_v2.ipynb  Data_Preprocessing_v3.py  Demand_Forecast_v1.ipynb  Demand_Forecast_v4.ipynb  Demand_Forecast_v6.ipynb  Demand_Forecasting.ipynb  Demand_Forecasting_Final.py  Demand_Forecasting_Pipeline_final.ipynb  Demand_Forecasting_Pipeline_updated.ipynb
models/fraud_detection/: Order_Fraud_Detection_Update.ipynb  Order_Fraud_Detection_fairml & lime.ipynb  data_preprocessing.ipynb  data_preprocessing.py
result/: Dockerfile  demand_forecast_model.pkl  leaderboard.csv
result/Docker-PoC-Test/: Dockerfile  iris_model.pkl
result/deploy/: DataCo_cleaned_part1.csv  (+8 more)
result/deploy/demand_forecast/: demand_forecast.pkl  demand_forecast_xgb.pkl  main.py  pyproject.toml
result/deploy/fraud_detection_streamlit_cloud/: Dockerfile  app.py  pyproject.toml
(+158 files in other folders)
