[tool.poetry]
name = "poetry add fastapi uvicorn xgboost"
version = "0.1.0"
description = ""
authors = ["karenwang <kojenwang7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
h2o = "^3.46.0.1"
mlflow = "^2.12.1"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
xgboost = "^2.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
