[tool.poetry]
name = "fraud-detection-streamlit"
version = "0.1.0"
description = ""
authors = ["karenwang <kojenwang7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.10"  # This avoids Python 3.9.7
streamlit = "^1.34.0"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
